# 1c-ai-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
1c-client/: AIGateway.cfe  README.md
1c-client/src/: ConfigDumpInfo.xml  Configuration.xml
1c-client/src/Catalogs/: AIG_Инструменты.xml  AIG_Модели.xml  AIG_Чаты.xml
1c-client/src/Catalogs/AIG_Инструменты/Forms/: ФормаНастройкаИнструмента.xml  ФормаЭлемента.xml
1c-client/src/Catalogs/AIG_Модели/Ext/: Predefined.xml
1c-client/src/CommonModules/: AIG_APIСервер.xml  AIG_Инструменты.xml  AIG_ИнструментыПовтИсп.xml  AIG_ОбщегоНазначения.xml  AIG_ОбщегоНазначенияКлиент.xml  AIG_Ресурсы.xml  AIG_РесурсыПовтИсп.xml  AIG_Содержимое.xml
1c-client/src/Constants/: AIG_АдресСервераGatewayAPI.xml  AIG_ОсновнаяМодель.xml  AIG_ПередаватьКонтекстЧата.xml  AIG_СистемнаяРоль.xml
1c-client/src/DataProcessors/: AIG_Администрирование.xml  AIG_Инструмент_Запрос.xml  AIG_Инструмент_ИнформацияОКонфигурации.xml  AIG_Инструмент_ИсточникДанных.xml  AIG_Инструмент_Отчеты.xml  AIG_Ресурс_СинтаксисВстроенногоЯзыка.xml
1c-client/src/Enums/: AIG_ТипыСообщений.xml
1c-client/src/HTTPServices/: AIG_AIGateway.xml
1c-client/src/Languages/: Русский.xml
1c-client/src/Roles/: AIG_ОсновнаяРоль.xml
1c-client/src/Subsystems/: AIG_AIGateway.xml
app/: config.py  main.py
app/agent/: executor.py
app/api/: routes.py
app/client_1c/: client.py
app/llm/: client.py
tests/: test_client_1c.py  test_client_1c_simple.py  test_executor.py  test_llm.py  test_main.py  test_routes.py
(+32 files in other folders)
